@@ -3,6 +3,10 @@
 	* DESCRIPTION (Version, Date): Roll minor version
         * inst/include/Rcpp/config.h: Idem
 
+	* docker/ci-3.4/Dockerfile: Added
+	* docker/ci-3.5/Dockerfile: Idem
+	* docker/ci-dev/Dockerfile: Idem
+
 2020-03-22  Mattias Ellert  <mattias.ellert@physics.uu.se>
 
 	* inst/include/Rcpp/exceptions_impl.h: Add include guard,
